# ray-tracing

./: .gitignore  CMakeLists.txt  run_all.sh
include/: camera.hpp  cube.hpp  element.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  scene_parser.hpp  sphere.hpp  triangle.hpp
mesh/: aliceduduke.mtl  n.mtl  nikeduduke.mtl  niko.mtl  nikocharacter.mtl
mesh/tex/: Fairy.tga  NPC_Others_GiantDodoco_01_Hat_Tex_Diffuse.tga  NPC_Others_GiantDodoco_Alice_01_Body_Tex_Diffuse.tga  NPC_Others_GiantDodoco_Barbeloth_01_Body_Tex_Diffuse.tga  NPC_Others_GiantDodoco_M_Body_Tex_Diffuse.tga  嘟嘟可2.tga  帽.tga  武器.tga  武器1.tga  笔记本.tga
mesh/tex/textures/tga_24bit/: NPC_Others_GiantDodoco_M_Hat_Tex_Diffuse.tga  NPC_Others_GiantDodoco_Nicole_01_Body_Tex_Diffuse.tga  NPC_Others_GiantDodoco_Nicole_01_Hat_Tex_Diffuse.tga  NPC_Others_GiantDodoco_Rhinedottir_01_Body_Tex_Diffuse.tga  NPC_Others_GiantDodoco_Rhinedottir_01_Hat_Tex_Diffuse.tga
mesh/tex/tga_out/: NicoleWing.bmp.tga  嘟嘟可1.bmp.tga  武器al.bmp.tga  砖.bmp.tga  笔.bmp.tga  道具.bmp.tga
src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp
testcases/: scene01.txt  scene02.txt  scene03.txt  scene04.txt  scene05.txt  scene06.txt  scene07.txt  scene07_shine.txt  scene_mis.txt  test.txt
